--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "alembic>=1.17.1",
     "boto3>=1.40.69",
     "boto3-stubs[essential]>=1.40.69",
     "fastapi[all]>=0.121.1",
