--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "alembic>=1.17.1",
+    "asyncpg>=0.30.0",
     "boto3>=1.40.69",
     "boto3-stubs[essential]>=1.40.69",
     "fastapi[all]>=0.121.1",
+    "greenlet>=3.2.4",
     "ipykernel>=7.1.0",
     "python-dotenv>=1.2.1",
     "scalar-fastapi>=1.4.3",
