Updated some minor changes in app/main.py and api/service/user_service.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "fastapi[all]>=0.121.1",
     "greenlet>=3.2.4",
     "ipykernel>=7.1.0",
+    "pwdlib[argon2]>=0.3.0",
     "python-dotenv>=1.2.1",
     "scalar-fastapi>=1.4.3",
     "sqlmodel>=0.0.27",
+    "types-passlib>=1.7.7.20250602",
 ]
