--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "greenlet>=3.2.4",
     "ipykernel>=7.1.0",
     "pwdlib[argon2]>=0.3.0",
+    "pyjwt>=2.10.1",
     "python-dotenv>=1.2.1",
     "scalar-fastapi>=1.4.3",
     "sqlmodel>=0.0.27",
