--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pwdlib[argon2]>=0.3.0",
     "pyjwt>=2.10.1",
     "python-dotenv>=1.2.1",
+    "redis>=7.0.1",
     "scalar-fastapi>=1.4.3",
     "sqlmodel>=0.0.27",
     "types-passlib>=1.7.7.20250602",
